--- a/the_machinery_book/editing_workflows/prototypes.html
+++ b/the_machinery_book/editing_workflows/prototypes.html
@@ -148,31 +148,46 @@
                     <main>
                         <h2 id="prototypes"><a class="header" href="#prototypes">Prototypes</a></h2>
 <p>The Machinery has a prototype system that allows entity assets to be used inside
-other entities. So you can for example create an entity asset that represents a
+other entities. </p>
+<p><strong>Table of Content</strong></p>
+<ul>
+<li><a href="#difference-between-a-prototype-an-instance-and-an-asset">Difference between a Prototype, an Instance and an Asset</a></li>
+<li><a href="#instance-properties-inspect">Instance Properties: Inspect</a></li>
+<li><a href="#instance-properties-override">Instance Properties: Override</a></li>
+<li><a href="#instance-properties-reset-or-propagate">Instance Properties: Reset or Propagate</a></li>
+<li><a href="#other-forms-of-prototypes-eg-graphs">Other forms of prototypes: e.g. Graphs</a></li>
+<li><a href="#what-is-next">What is next?</a></li>
+</ul>
+<p>So you can for example create an entity asset that represents a
 room, and then create a house entity that has a bunch of these room entities
 placed into it:</p>
 <p><img src="https://www.dropbox.com/s/2hpnogh7bff9jge/house-entity.png?dl=1" alt="Three Room entities placed to form a House entity." /></p>
+<h2 id="difference-between-a-prototype-an-instance-and-an-asset"><a class="header" href="#difference-between-a-prototype-an-instance-and-an-asset">Difference between a Prototype, an Instance and an Asset</a></h2>
 <p>We call the room asset a <em>prototype</em>, and we call each placed room entity an
 <em>instance</em> of that prototype. Note that prototypes are not special assets, any
 entity asset can be used as a prototype, with instances of it placed in another
 entity asset.</p>
 <p>In the Entity Tree tab, prototype instances are shown in yellow to distinguish them from locally
 owned child entities (which are shown in white).</p>
+<h2 id="instance-properties-inspect"><a class="header" href="#instance-properties-inspect">Instance Properties: Inspect</a></h2>
 <p>If you expand an instance you will notice that most of its components and child entities are grayed
 out and can't be selected. This is because they are inherited from the prototype, and the prototype
 controls their values. If the prototype is modified — for example if we scatter some more props on
 the floor — those changes are reflected everywhere the prototype has been placed. In the example
 above, all three room instances would get the scattered objects.</p>
+<h2 id="instance-properties-override"><a class="header" href="#instance-properties-override">Instance Properties: Override</a></h2>
 <p>If we want to, however, we can choose to <em>override</em> some of the prototype’s
 properties. When we override a property, we modify its value for <em>this instance</em>
 of the prototype only. Other instances will keep the value from the prototype.</p>
-<p>To initiate an override, right-click the component or child entity whose
+<p>To initiate an override, right-click (or double click) the component or child entity whose
 properties you want to override and choose <strong>Override</strong> in the context
 menu. In addition to modifying properties, you can also add or remove components
 or child entities on the overridden entity.</p>
-<p>If you override the property of some node deep in the hierarchy of the placed entity, all its
+<blockquote>
+<p><strong>Note:</strong> If you override the property of some node deep in the hierarchy of the placed entity, all its
 parents will automatically get overridden too. Let's modify the position of the barrel in the
 front-most room:</p>
+</blockquote>
 <p><img src="https://www.dropbox.com/s/uy0rzwhrjzen42i/override.png?dl=1" alt="Barrel position overridden." /></p>
 <p>The overridden entities and components are drawn in blue. We change the x and z components of the
 position to move the barrel. Note how the changed values are shown in white, while the values that
@@ -186,16 +201,23 @@ position.</p>
 overridden are still inherited from the prototype. If we modify the prototype —
 for example change the barrel to a torch — all instances will get the change,
 since it was only the x and z positions of the object that we changed.</p>
+<h2 id="instance-properties-reset-or-propagate"><a class="header" href="#instance-properties-reset-or-propagate">Instance Properties: Reset or Propagate</a></h2>
 <p>The context menus can be used to perform other prototype operations. For example,
 you can <strong>Reset</strong> properties back to the prototype values. You can also
 <strong>Propagate</strong> the changes you have made to an overridden component or entity
 back to the prototype so that all instances get the changes. Finally, you can
 <strong>Remove</strong> the overrides and get the instance back to being an exact replica of
 the prototype.</p>
+<h2 id="other-forms-of-prototypes-eg-graphs"><a class="header" href="#other-forms-of-prototypes-eg-graphs">Other forms of prototypes: e.g. Graphs</a></h2>
 <p>Prototypes can also be used for other things than entities. For example, if you have a graph that
 you want to reuse in different places you can create a Graph Asset to hold the graph, and then
 instantiate that asset in the various places where you want to use it. Just as with the entity
 instances, you can override specific nodes in the graph instance to customize the behavior.</p>
+<h2 id="what-is-next"><a class="header" href="#what-is-next">What is next?</a></h2>
+<ul>
+<li><a href="https://ourmachinery.github.io/themachinery-books/tutorials//workflows/how_to_create_prototypes.html">How to create a prototype?</a></li>
+<li><a href="https://ourmachinery.github.io/themachinery-books/tutorials/workflows/how_to_instantiate_prototypes.html#how-to-instantiate-prototypes">How to instantiate Prototypes</a></li>
+</ul>
 
                     </main>
 
